@@ -34,7 +34,7 @@
   f22aef52f7062813148d3ea1f4477b7ee05f5f5a 2010052100 mingw32-expat.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
   bd82145739caba7007e5fda2cb9f61fca97d2b15 2011050500 mingw32-gcc4.xml
-  7cf1957c21a451b1934876663c95bc5128b6e086 2011080301 mingw32-gdb.xml
+  88ed082418ab8bca93cf99396aee9ecaaed1c0df 2011080400 mingw32-gdb.xml
   432e7e89cfc138836b6b39930d81c5d054882ea4 2010090600 mingw32-gendef.xml
   7244fccd3713760a3afda6b9e4908a9610a645b3 2010090600 mingw32-gettext.xml
   753225ffa6c00882b8e5aaf0c1be392e75dad30d 2010083100 mingw32-gmp.xml
