@@ -1,3 +1,10 @@
+2011-08-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
+	Update & publish mingw32-gdb.
+
+	* mingw32/mingw32-gdb.xml: Update to 7.3-2.
+	* mingw32/issue.log: Updated accordingly.
+
 2011-08-01  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
 	Update & publish mingw32-gdb.
